# agent-cookbooks

./: .env  .env.example  .gitattributes  .gitignore  CLAUDE.md  QWEN.md  README.md  agent_chat.py  agent_conversations.py  agent_researcher.py  agents.py  ai_engineer.py  ai_researcher.py  main.py  pyproject.toml
ag/: OAI_CONFIG_LIST.sample  agent_conversations.py
agent/: multi_agents.py  rag.py  rag_agent.py  workflow.py
agentic/: agentic_rag.py  evals.py  reasoning_models.py
agentic/analyze/: extract_tags.py
agents/: rag.py  reasoning_agent.py  reasoning_tools.py
assistant/: react.py  tools_call.py
ca/: agent_engineer.py
collab/: agent_engineer.py  agent_researcher.py  engineer.py
cookbook/product/: agents.py  tasks.py
cookbooks/: a2a_agents.py  context_compact.py  context_offloading.py  context_pruning.py  context_tools_call.py  func_calls.py  images.py  llm_proxy.py  multi-agents.py  multimodal_rag.py  text_extract.py  tools_call.py
cookbooks/a2a/: agents.py  langraph.json
cookbooks/evals/: test_deepeval.py
cookbooks/mcp/: math_server.py  weather_server.py
cookbooks/store/: embedding_store.py  images_retrieve.py  multimodal_store.py
cookbooks/tools/: retriever_tool.py  tools_registry.py
examples/agents/: deep_agents.py  intelligent_memory_agent.py  llm_proxy.py  multi_agents.py  react_agent.py  shared_memory_agents.py  super_agent.py
examples/agents/a2a/: langraph.json
examples/context/: compact.py  ltm.py  offloading.py  pruning.py  tools_call.py
examples/document/: pdf2images.py  text_extract.py
examples/mcp/: math_server.py  mcp_agents.py
examples/rag/: multimodal_rag.py
examples/store/: README.md  embedding_store.py  multimodal_store.py  qdrant_store_adapter.py  retriever.py  vector_retriever.py  verify_vector_consistency.py
examples/tools/: registry.py  retriever_tool.py
examples/validation/: inputs.py  outputs.py  validators.py
rag/: main.py  run.py
rag/store/: graph_chunk_entity_relation.graphml  kv_store_llm_response_cache.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
react/: main.py
research/: main.py
rhq/: agents.py  callbacks.py  llms.py  tasks.py
