[project]
name = "agentic-cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
    "agno>=1.2.16",
    "deepeval>=3.1.8",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.0",
    "fastmcp>=2.10.6",
    "guardrails-ai>=0.1.8",
    "httpx>=0.27.2",
    "lancedb>=0.21.2",
    "mcp[cli]>=1.6.0",
    "numexpr>=2.10.2",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.7",
    "pylance>=0.25.2",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "tantivy>=0.22.2",
    "yfinance>=0.2.55",
]
