[project]
name = "agentic-cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepeval>=3.1.8",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.0",
    "fastmcp>=2.10.6",
    "guardrails-ai>=0.1.8",
    "httpx>=0.27.2",
    "ipython>=9.6.0",
    "lancedb>=0.21.2",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.22",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "langchain-tavily>=0.2.12",
    "langextract>=1.0.9",
    "langgraph>=0.6.10",
    "langgraph-bigtool>=0.0.3",
    "langgraph-supervisor>=0.0.29",
    "mcp[cli]>=1.6.0",
    "numexpr>=2.10.2",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.7",
    "pylance>=0.25.2",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "sqlite-vec>=0.1.6",
    "tantivy>=0.22.2",
    "yfinance>=0.2.55",
]
